# satellite-weather-downloader

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Makefile  README.md  Testing Satellite.ipynb  Testing Xarray.ipynb  env.tpl  filtering_by_polygon.ipynb  pyproject.toml
.github/workflows/: release.yaml  satellite-build.yaml
conda/: dev.yaml
docker/: Dockerfile  compose-base.yaml  compose.yaml
docker/celery/: run.sh
docker/celeryapp/: db_connection.py  delay_controller.json  delay_controller.py  delays.json
docker/celeryapp/downloader/: __init__.py  beat.py  config.py  tasks.py
docker/celeryapp/weather/: __init__.py  beat.py  config.py  reanalysis_era5_single_levels.sql  tasks.py
docker/scripts/: beat_downloader.sh  beat_weather.sh  poetry-install.sh
downloader_app/: __init__.py  celeryapp.py  celeryconfig.py  tasks.py
notebooks/: 001_Basic_Usage.ipynb  001_basic_usage.ipynb  001_requests_usage.ipynb  002_ADM_usage.ipynb  002_copebr_basic_usage.ipynb  003_cope_extension_usage.ipynb  003_coper_extension_usage.ipynb  01_reference_populate_ADM.ipynb  02_reference_ADM_to_dataframe.ipynb  2010rio.ipynb  2021portovelho.ipynb  reanalysis_usage.ipynb
satellite/: __init__.py  models.py  request.py
satellite/data/: ADM.duckdb
satellite/data/DSEI/: areas_dsei.prj
satellite/data/gpkgs/: ARG.gpkg  BRA.gpkg  README.md
satellite/downloader/: __init__.py  extract_reanalysis.py  models.py  request.py
satellite/downloader/reanalysis/: api_vars.py  prompt.py
satellite/extensions/: cope.py
satellite/geo/: constants.py  functional.py  models.py
satellite/weather/: __init__.py  constants.py  copebr.py  core.py  dsei.py  types.py  validations.py  xr_extensions.py
satellite/weather/_brazil/: __init__.py  extract_coordinates.py  extract_latlons.py
satellite/weather/_brazil/DSEI/: areas.py  areas_dsei.shx
satellite/weather/brazil/: __init__.py  extract_coordinates.py  extract_latlons.py
satellite/weather/brazil/DSEI/: __init__.py  areas.py  areas_dsei.dbf
satellite/weather/extensions/: cope.py  dsei.py
satellite/weather/locales/AR/: muns.json
satellite/weather/locales/BR/: __init__.py  muns.json
satellite/weather/orm/: constants.py  functional.py  models.py  types.py  validations.py
satellite/weather/utils/: __init__.py  extract_coordinates.py  extract_latlons.py
satellite_celeryapp/: __init__.py  tasks.py
satellite_celeryapp/downloader/: __init__.py  beat.py
satellite_celeryapp/weather/: __init__.py
satellite_downloader/: __init__.py  connection.py  extract_reanalysis.py  request.py
satellite_downloader/reanalysis/: api_vars.py  cli.py  prompt.py
satellite_downloader/utils/: __init__.py  connection.py
satellite_weather/: .backfilldb  __init__.py  xr_extensions.py
satellite_weather/_brazil/DSEI/: __init__.py  areas.py
satellite_weather/utils/: episem.py  extract_coordinates.py  extract_latlons.py  globals.py  reanalysis_era5_single_levels.sql
satellite_weather_downloader/: Untitled.ipynb  __init__.py  celeryapp.py  celeryconfig.py  extract_reanalysis.py  reanalysis_era5_single_levels.sql  reanalysis_usage.ipynb  tasks.py  xr_extensions.py
satellite_weather_downloader/celery_app/: backfill.py  celeryapp.py  celeryconfig.py  delay_controller.json  tasks.py  test.py
satellite_weather_downloader/utils/: connection.py  episem.py  extract_coordinates.py  extract_latlons.py  globals.py  municipios.json
tests/: test_copebr.py  test_downloader_app.py
tests/data/: BR_20230101.nc
tests/unit/: test_downloader.py
tests/unit/weather/: test_brazil.py
tests/weather/: test_brazil.py
