
[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "satellite-weather-downloader"
version = "1.9.2"  # changed by semantic-release
description = "The modules available in this package are designed to capture and proccess satellite data from Copernicus"
readme = "README.md"
authors = ["Luã Bida Vacaro <luabidaa@gmail.com>"]
maintainers = ["Luã Bida Vacaro <luabidaa@gmail.com>"]
license = "GNU GPL v3.0"
repository = "https://github.com/osl-incubator/satellite-weather-downloader"
homepage = "https://github.com/osl-incubator/satellite-weather-downloader"

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

packages = [
  {include='satellite'},
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
cdsapi = "^0.5.1"
pandas = ">=2.0.0"
numpy = ">=1.25"
SQLAlchemy = "^1.4.41"
python-dotenv = "^0.21.0"
netCDF4 = "^1.6.1"
tqdm = "^4.64.1"
loguru = "^0.6.0"
amqp = "^5.1.1"
requests = "^2.28.2"
prompt-toolkit = "^3.0.36"
geopandas = "^0.12.2"
matplotlib = "^3.6.3"
shapely = "^2.0.1"
dask = "^2023.3.1"
xarray = ">=2023.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
jupyterlab = "^3.4.8"
seaborn = "^0.12.1"
pre-commit = "^2.20.0"
tomli = "^2.0.1"
black = ">=23.7"
virtualenv = "^20.24.2"
ruff = "^0.0.284"


[tool.poetry.group.tests.dependencies]
snakeviz = "^2.2.0"


[tool.poetry.group.test.dependencies]
memory-profiler = "^0.61.0"

[tool.isort]
profile = "black"
src_paths = ["isort", "test"]

[tool.blue]
# https://github.com/psf/black
target-version = ["py39"]
line-length = 79
color = true

exclude = ["*.git", "docs/"]
