
[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "satellite-weather-downloader"
version = "1.10.1"  # changed by semantic-release
description = "The modules available in this package are designed to capture and proccess satellite data from Copernicus"
readme = "README.md"
authors = ["Luã Bida Vacaro <luabidaa@gmail.com>"]
maintainers = ["Luã Bida Vacaro <luabidaa@gmail.com>"]
license = "GNU GPL v3.0"
repository = "https://github.com/osl-incubator/satellite-weather-downloader"
homepage = "https://github.com/osl-incubator/satellite-weather-downloader"

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

packages = [
  {include='satellite'},
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
cdsapi = ">=0.7.3"
pandas = "<2"
numpy = "<2.0.0"
python-dotenv = "^0.21.0"
netCDF4 = "^1.6.1"
tqdm = "^4.64.1"
loguru = "^0.6.0"
requests = "^2.28.2"
geopandas = ">=1.0.1"
matplotlib = "^3.6.3"
shapely = ">=2.0.3"
epiweeks = "^2.3.0"
pydantic = "^2.9.2"
typing-extensions = "^4.12.2"
duckdb-engine = "^0.13.2"
duckdb = "^1.1.2"
h5netcdf = "^1.4.0"
rioxarray = "^0.17.0"
xagg = "^0.3.2.4"
xarray = "<2024.10"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
jupyterlab = "^3.4.8"
seaborn = "^0.12.1"
pre-commit = "^2.20.0"
tomli = "^2.0.1"
black = "24.2.0"
virtualenv = "^20.24.2"
ruff = "^0.0.284"
cartopy = "^0.24.1"
matplotlib = "^3.9.2"
cmocean = "^4.0.3"


[tool.poetry.group.tests.dependencies]
snakeviz = "^2.2.0"


[tool.poetry.group.test.dependencies]
memory-profiler = "^0.61.0"

[tool.isort]
profile = "black"
src_paths = ["isort", "test"]

[tool.blue]
# https://github.com/psf/black
target-version = ["py39"]
line-length = 79
color = true

exclude = ["*.git", "docs/"]
